--- a/Flashcards/index.html
+++ b/Flashcards/index.html
@@ -9,8 +9,20 @@
 </head>
 <body>
     <div>
-        
+        <input type="button" value="Qual é a principal função da linguagem HTML?">
+    </div>
+
+    <div>
+        <p>Como inserir o arquivo “foto.png” em uma página html?</p>
     </div>
     
+    <div>
+        <p>Quais são os valores possíveis para a propriedade “target” da tag “a”?</p>
+    </div>
+
+    <div>
+        <p></p>
+    </div>
+
 </body>
 </html>
