--- a/Flashcards/index.html
+++ b/Flashcards/index.html
@@ -9,8 +9,42 @@
 </head>
 <body>
     <div>
-        
+        <div>
+            <input type="button" value="Qual é a principal função da linguagem CSS?">
+        </div>
+        <div>
+            <input type="button" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
+        </div>
+        <div>
+            <input type="button" value="Como adicionar um arquivo CSS em um arquivo HTML?">
+        </div>
+        <div>
+            <input type="button" value="O que faz a propriedade “color”?">
+        </div>
+        <div>
+            <input type="button" value="Diferencie class de id:">
+        </div>
+        <div>
+            <input type="button" value="Explique o box-model:">
+        </div>
+        <div>
+            <input type="button" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
+        </div>
+        <div>
+            <input type="button" value="Como converter um valor string para int">
+        </div>
+        <div>
+            <input type="button" value="Como funcionam os eventos JS?">
+        </div>
+        <div>
+            <input type="button" value="Para que serve o método .forEach()?">
+        </div>
+        <div>
+            <input type="button" value="Para que serve o método .forEach()?">
+        </div>
+        <div>
+            <input type="button" value="Como adicionar um arquivo .js em um arquivo HTML?">
+        </div>
     </div>
-    
 </body>
 </html>
