--- a/Flashcards/index.html
+++ b/Flashcards/index.html
@@ -8,45 +8,67 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div>
-        <div>
-            <input type="button" value="Qual é a principal função da linguagem CSS?">
-        </div>
-        <div>
-            <input type="button" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
-        </div>
-        <div>
-            <input type="button" value="Como adicionar um arquivo CSS em um arquivo HTML?">
-        </div>
-        <div>
-            <input type="button" value="O que faz a propriedade “color”?">
-        </div>
-        <div>
-            <input type="button" value="Diferencie class de id:">
-        </div>
-        <div>
-            <input type="button" value="Explique o box-model:">
-        </div>
-        <div>
-            <input type="button" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
-        </div>
-        <div>
-            <input type="button" value="Como converter um valor string para int">
-        </div>
-        <div>
-            <input type="button" value="Como funcionam os eventos JS?">
-        </div>
-        <div>
-            <input type="button" value="Para que serve o método .forEach()?">
-        </div>
-        <div>
-            <input type="button" value="Para que serve o método .forEach()?">
-        </div>
-        <div>
-            <input type="button" value="Como adicionar um arquivo .js em um arquivo HTML?">
-        </div>
+    <!--Parte do HTML-->
     </div>
         <input type="button" value="Qual é a principal função da linguagem HTML?">
     </div>
+    </div>
+        <input type="button" value="Como inserir o arquivo “foto.png” em uma página html?">
+    </div>
+    </div>
+        <input type="button" value="Quais são os valores possíveis para a propriedade “target” da tag “a”?">
+    </div>
+    </div>
+        <input type="button" value="Diferencie a tag <div> da tag <span>">
+    </div>
+    </div>
+        <input type="button" value="O que é semântica em HTML? Dê exemplos de tags:">
+    </div>
+    </div>
+        <input type="button" value="Qual é o valor padrão para a propriedade method de um <form>?">
+    </div>
+
+    <!--Parte do CSS-->
+
+    <div>
+        <input type="button" value="Qual é a principal função da linguagem CSS?">
+    </div>
+    <div>
+        <input type="button" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
+    </div>
+    <div>
+        <input type="button" value="Como adicionar um arquivo CSS em um arquivo HTML?">
+    </div>
+    <div>
+        <input type="button" value="O que faz a propriedade “color”?">
+    </div>
+    <div>
+        <input type="button" value="Diferencie class de id:">
+    </div>
+    <div>
+        <input type="button" value="Explique o box-model:">
+    </div>
+
+    <!--Parte do JavaScript-->
+
+    <div>
+        <input type="button" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
+    </div>
+    <div>
+        <input type="button" value="Como converter um valor string para int">
+    </div>
+    <div>
+        <input type="button" value="Como funcionam os eventos JS?">
+    </div>
+    <div>
+        <input type="button" value="Para que serve o método .forEach()?">
+    </div>
+    <div>
+        <input type="button" value="Para que serve o método .forEach()?">
+    </div>
+    <div>
+        <input type="button" value="Como adicionar um arquivo .js em um arquivo HTML?">
+    </div>
+
 </body>
 </html>
