Identificando os elementos

--- a/Flashcards/index.html
+++ b/Flashcards/index.html
@@ -11,63 +11,81 @@
     <!--Parte do HTML-->
     </div>
         <input type="button" value="Qual é a principal função da linguagem HTML?">
+        <input type="button" id="1" value="Qual é a principal função da linguagem HTML?">
     </div>
     </div>
         <input type="button" value="Como inserir o arquivo “foto.png” em uma página html?">
+        <input type="button" id="2" value="Como inserir o arquivo “foto.png” em uma página html?">
     </div>
     </div>
         <input type="button" value="Quais são os valores possíveis para a propriedade “target” da tag “a”?">
+        <input type="button" id="3" value="Quais são os valores possíveis para a propriedade “target” da tag “a”?">
     </div>
     </div>
         <input type="button" value="Diferencie a tag <div> da tag <span>">
+        <input type="button" id="4" value="Diferencie a tag <div> da tag <span>">
     </div>
     </div>
         <input type="button" value="O que é semântica em HTML? Dê exemplos de tags:">
+        <input type="button" id="5" value="O que é semântica em HTML? Dê exemplos de tags:">
     </div>
     </div>
         <input type="button" value="Qual é o valor padrão para a propriedade method de um <form>?">
+        <input type="button" id="6" value="Qual é o valor padrão para a propriedade method de um <form>?">
     </div>
 
     <!--Parte do CSS-->
 
     <div>
         <input type="button" value="Qual é a principal função da linguagem CSS?">
+        <input type="button" id="7" value="Qual é a principal função da linguagem CSS?">
     </div>
     <div>
         <input type="button" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
+        <input type="button" id="8" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
     </div>
     <div>
         <input type="button" value="Como adicionar um arquivo CSS em um arquivo HTML?">
+        <input type="button" id="9" value="Como adicionar um arquivo CSS em um arquivo HTML?">
     </div>
     <div>
         <input type="button" value="O que faz a propriedade “color”?">
+        <input type="button" id="10" value="O que faz a propriedade “color”?">
     </div>
     <div>
         <input type="button" value="Diferencie class de id:">
+        <input type="button" id="11" value="Diferencie class de id:">
     </div>
     <div>
         <input type="button" value="Explique o box-model:">
+        <input type="button" id="12" value="Explique o box-model:">
     </div>
 
     <!--Parte do JavaScript-->
 
     <div>
         <input type="button" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
+        <input type="button" id="13" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
     </div>
     <div>
         <input type="button" value="Como converter um valor string para int">
+        <input type="button" id="14" value="Como converter um valor string para int">
     </div>
     <div>
         <input type="button" value="Como funcionam os eventos JS?">
+        <input type="button" id="15" value="Como funcionam os eventos JS?">
     </div>
     <div>
         <input type="button" value="Para que serve o método .forEach()?">
+        <input type="button" id="016" value="Para que serve o método .forEach()?">
     </div>
     <div>
         <input type="button" value="Para que serve o método .forEach()?">
+        <input type="button" id="17" value="Para que serve o método .forEach()?">
     </div>
     <div>
         <input type="button" value="Como adicionar um arquivo .js em um arquivo HTML?">
+        <input type="button" id="18" value="Como adicionar um arquivo .js em um arquivo HTML?">
     </div>
 
 </body>
