Termino da aula

--- a/Flashcards/index.html
+++ b/Flashcards/index.html
@@ -8,67 +8,68 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <!--Parte do HTML-->
-    </div>
-        <input type="button" id="card0" value="Qual é a principal função da linguagem HTML?">
-    </div>
-    </div>
-        <input type="button" id="card1" value="Como inserir o arquivo “foto.png” em uma página html?">
-    </div>
-    </div>
-        <input type="button" id="card2" value="Quais são os valores possíveis para a propriedade “target” da tag “a”?">
-    </div>
-    </div>
-        <input type="button" id="card3" value="Diferencie a tag <div> da tag <span>">
-    </div>
-    </div>
-        <input type="button" id="card4" value="O que é semântica em HTML? Dê exemplos de tags:">
-    </div>
-    </div>
-        <input type="button" id="card5" value="Qual é o valor padrão para a propriedade method de um <form>?">
-    </div>
+    <div class="container">
+        <!--Parte do HTML-->
+        <div class="tamanho">
+            <input type="button" id="card0" value="Qual é a principal função da linguagem HTML?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card1" value="Como inserir o arquivo “foto.png” em uma página html?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card2" value="Quais são os valores possíveis para a propriedade “target” da tag “a”?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card3" value="Diferencie a tag <div> da tag <span>">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card4" value="O que é semântica em HTML? Dê exemplos de tags:">
+        </div>
+        <div class="tamanho"> 
+            <input type="button" id="card5" value="Qual é o valor padrão para a propriedade method de um <form>?">
+        </div>
 
-    <!--Parte do CSS-->
+        <!--Parte do CSS-->
 
-    <div>
-        <input type="button" id="card6" value="Qual é a principal função da linguagem CSS?">
-    </div>
-    <div>
-        <input type="button" id="card7" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
-    </div>
-    <div>
-        <input type="button" id="card8" value="Como adicionar um arquivo CSS em um arquivo HTML?">
-    </div>
-    <div>
-        <input type="button" id="card9" value="O que faz a propriedade “color”?">
-    </div>
-    <div>
-        <input type="button" id="card10" value="Diferencie class de id:">
-    </div>
-    <div>
-        <input type="button" id="card11" value="Explique o box-model:">
-    </div>
+        <div class="tamanho">
+            <input type="button" id="card6" value="Qual é a principal função da linguagem CSS?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card7" value="Qual é a vantagem de estilizar um documento com CSS via documento externo?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card8" value="Como adicionar um arquivo CSS em um arquivo HTML?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card9" value="O que faz a propriedade “color”?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card10" value="Diferencie class de id:">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card11" value="Explique o box-model:">
+        </div>
 
-    <!--Parte do JavaScript-->
+        <!--Parte do JavaScript-->
 
-    <div>
-        <input type="button" id="card12" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
+        <div class="tamanho">
+            <input type="button" id="card12" value="Diferencie Javascript de Java quanto ao seu funcionamento:">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card13" value="Como adicionar um arquivo .js em um arquivo HTML?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card14" value="Como converter um valor string para int?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card15" value="Como funcionam os eventos JS?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card16" value="Para que serve o método .forEach()?">
+        </div>
+        <div class="tamanho">
+            <input type="button" id="card17" value="O que são funções arrow?">
+        </div>
     </div>
-    <div>
-        <input type="button" id="card13" value="Como converter um valor string para int">
-    </div>
-    <div>
-        <input type="button" id="card14" value="Como funcionam os eventos JS?">
-    </div>
-    <div>
-        <input type="button" id="card15" value="Para que serve o método .forEach()?">
-    </div>
-    <div>
-        <input type="button" id="card16" value="Para que serve o método .forEach()?">
-    </div>
-    <div>
-        <input type="button" id="card17" value="Como adicionar um arquivo .js em um arquivo HTML?">
-    </div>
-
 </body>
 </html>
