--- a/Eniugmâs/index.html
+++ b/Eniugmâs/index.html
@@ -8,18 +8,22 @@
 </head>
 <body>
     <form action="enegma.php" method="post">
-        <h1>Salve a rosa!</h1>
-        <figure>
-            <img src="src/rosa_murcha.jpg" alt="Imagem não encontrada">
-        </figure>
-        <div>
-            <input type="text" name="texto">
-        </div>
-        <div>
-            <button name="button" value="chamas">Sol</button>
-            <button name="button" value="agua">Água</button>
-            <button name="button" value="terra">Terra</button>
-        </div>
+        <section>
+            <h1>Salve a rosa com amor!</h1>
+            <figure>
+                <img src="src/rosa_murcha.jpg" alt="Imagem não encontrada">
+            </figure>
+        </section>
+        <section>
+            <div>
+                <input type="text" name="texto">
+            </div>
+            <div>
+                <button name="button" value="chamas">Sol</button>
+                <button name="button" value="agua">Água</button>
+                <button name="button" value="terra">Terra</button>
+            </div>
+        </section>
     </form>
 </body>
 </html>
